clear code from swagger & setup auth
