# swagger.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.0
 paths:
-  /todos:
+  /api/todos:
     post:
       operationId: TodosController_create
       parameters: []
@@ -38,7 +38,7 @@ paths:
         '401':
           description: unauthorized .
       tags: *ref_0
-  /todos/{id}:
+  /api/todos/{id}:
     get:
       operationId: TodosController_findOne
       parameters:
@@ -99,6 +99,79 @@ paths:
         '401':
           description: unauthorized .
       tags: *ref_0
+  /api/auth/login:
+    post:
+      operationId: AuthController_login
+      parameters: []
+      responses:
+        '201':
+          description: ''
+  /api/auth/test:
+    get:
+      operationId: AuthController_test
+      parameters: []
+      responses:
+        '200':
+          description: ''
+  /api/user:
+    post:
+      operationId: UserController_create
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateUserDto'
+      responses:
+        '201':
+          description: ''
+    get:
+      operationId: UserController_findAll
+      parameters: []
+      responses:
+        '200':
+          description: ''
+  /api/user/{id}:
+    get:
+      operationId: UserController_findOne
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        '200':
+          description: ''
+    patch:
+      operationId: UserController_update
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateUserDto'
+      responses:
+        '200':
+          description: ''
+    delete:
+      operationId: UserController_remove
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        '200':
+          description: ''
 info:
   title: todo-app
   description: ''
@@ -152,5 +225,11 @@ components:
         - isDone
         - user_id
     UpdateTodoDto:
+      type: object
+      properties: {}
+    CreateUserDto:
+      type: object
+      properties: {}
+    UpdateUserDto:
       type: object
       properties: {}
